# OmgEngine

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
app/: CMakeLists.txt
app/shaders/fragment/: shader.glsl  textured_shader.glsl
app/shaders/vertex/: shader.glsl  textured_shader.glsl
app/src/: app_layer.cpp  app_layer.h  imgui_layer.cpp  imgui_layer.h  main.cpp  overlay_layer.cpp  overlay_layer.h
core/: CMakeLists.txt
core/src/core/: application.cpp  application.h  event.h  input_events.h  layer.cpp  layer.h  logger.cpp  logger.h  window.cpp  window.h  window_events.h
core/src/core/physics/: sphere.cpp  sphere.h
core/src/core/renderer/: camera.cpp  camera.h  light.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
